# the-supa-awesome-compiler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
debug/: ast.json
tests/: func.marsh
the_supa_awesome_compiler/: _AST.py  _compiler.py  _environment.py  _lexer.py  _parser.py  _token.py  compiler.py  main.py  viz_ast.py
the_supa_awesome_compiler/viz_ast/: AST  viz_ast.py
