[tool.poetry]
name = "the-supa-awesome-compiler"
version = "0.1.0"
description = ""
authors = ["Anas Badr <anasihabezmc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llvmlite = "^0.43.0"
graphviz = "^0.20.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
